[gd_scene load_steps=2 format=3 uid="uid://dt2dagvclmcih"]

[ext_resource type="Script" uid="uid://d06womi35383p" path="res://scripts/ui/screens/LoadingScreen.gd" id="1_n7j2k"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n7j2k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LogoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GODS RPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Starting up..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Version 0.1.0 MVP"
horizontal_alignment = 1
vertical_alignment = 1
